Fix issue with elements overlapping navbar

--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -6,6 +6,7 @@ $navbar-lg: 1185px;
 	position: sticky;
 	top: 0;
 	width: 100%;
+	z-index: 10;
 }
 
 .navbar-container {
